--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "build": "vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "serve": "vite build & vite preview --port 3000 --strictPort --host"
   },
   "version": "0.1.0"
 }
